<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width = "match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">



    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:background="@color/ciao"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciao"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/ciao"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutto"
        android:background="@color/ciao"/>


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ook"
        android:background="@color/ciao"/>



    </LinearLayout>