<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="30dp"
        android:inputType="textEmailAddress"
        android:id="@+id/email_register"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="30dp"
        android:inputType="textPassword"
        android:id="@+id/password_register"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:padding="30dp"
        android:inputType="number"
        android:id="@+id/phone_register"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        android:padding="30dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/registrati"
            android:id="@+id/registrati_button"/>


    </LinearLayout>

</LinearLayout>
